[gd_scene load_steps=3 format=3 uid="uid://c1char_create"]

[ext_resource type="Script" path="res://scripts/ui/character_creation.gd" id="1_char_create"]
[ext_resource type="Theme" path="res://theme/game_theme.tres" id="2_theme"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_char_create")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.12, 0.08, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Crée ton Équipe"
horizontal_alignment = 1

[node name="PartyPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.45
anchor_bottom = 0.85

[node name="VBox" type="VBoxContainer" parent="PartyPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PartyPanel/VBox"]
layout_mode = 2
text = "Ton Équipe (0/4)"

[node name="PartyList" type="VBoxContainer" parent="PartyPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ClassPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.85

[node name="VBox" type="VBoxContainer" parent="ClassPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ClassPanel/VBox"]
layout_mode = 2
text = "Choisir une Classe"

[node name="ClassList" type="VBoxContainer" parent="ClassPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="NameInput" type="HBoxContainer" parent="ClassPanel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="ClassPanel/VBox/NameInput"]
layout_mode = 2
text = "Nom:"

[node name="LineEdit" type="LineEdit" parent="ClassPanel/VBox/NameInput"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Nom du personnage"
max_length = 20

[node name="AddButton" type="Button" parent="ClassPanel/VBox"]
layout_mode = 2
text = "Ajouter à l'équipe"

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -70.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Commencer l'Aventure"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -70.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "Retour"

[connection signal="pressed" from="ClassPanel/VBox/AddButton" to="." method="_on_add_character_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
